Removed project parameter from get analytic endpoint
